# TenderIQ

./: .gitignore  README.md  docker-compose.yml  slice1.md  slice2.md  slice3.md  walkthrough.md
.playwright-mcp/: page-2026-07-01T21-03-37-753Z.yml  page-2026-07-05T20-17-26-578Z.yml  page-2026-07-05T20-18-07-196Z.yml  page-2026-07-05T20-23-35-336Z.yml  (+10 more)
backend/: .env.example  alembic.ini  pyproject.toml  seed_company.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_tenders_and_chunks.py  0002_company_profiles_full_schema.py  0003_create_analysis_runs_table.py  0004_create_llm_cost_events_table.py  0005_create_risk_findings_table.py  0006_create_financial_commitments_table.py  0007_create_hitl_overrides_table.py  0008_create_eval_results_table.py
backend/app/: config.py  errors.py  main.py
backend/app/agents/: embeddings.py  graph.py  ingestion.py  retrieval.py  state.py
backend/app/agents/nodes/: aggregator.py  feasibility_scorer.py  financial_analyst.py  ingestor.py  report_assembler.py  risk_radar.py  supervisor.py
backend/app/agents/skills/: feasibility_scoring.py  financial_extraction.py  report_synthesis.py  risk_clause_extraction.py
backend/app/agents/tools/: __init__.py  profile_lookup.py
backend/app/db/: base.py  models.py  session.py
backend/app/middleware/: auth.py  cost_tracker.py  rate_limit.py
backend/app/routers/: analytics.py  company.py  eval.py  stream.py  tenders.py
backend/app/schemas/: analysis.py  analytics.py  company.py  eval.py  stream.py  tender.py
backend/app/services/: chunking.py  event_bus.py  language.py  pdf.py  storage.py  validation.py
backend/eval/: labelled_sample_tender.json  run_eval.py  schemas.py
backend/tests/: __init__.py  conftest.py  test_analysis_run.py  test_company_profile.py  test_feasibility_scorer.py  test_financial_analyst.py  test_hitl.py  test_ingestion_pipeline.py  test_report_assembler.py  test_risk_radar.py  test_tenders_upload.py  test_websocket.py
docs/: 01_PRD.md  (+1 more)
(+114 files in other folders)
